--- a/squawk-fx/build.gradle
+++ b/squawk-fx/build.gradle
@@ -10,6 +10,9 @@ repositories {
 dependencies {
 // https://mvnrepository.com/artifact/org.glassfish/javax.json
     compile group: 'org.glassfish', name: 'javax.json', version: '1.1.4'
+    // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.8'
+
 }
 
 
